--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -2040,7 +2040,7 @@ pre code {
 .table td {
   padding: 0.75rem;
   vertical-align: top;
-  border-top: 1px solid rgba(0, 0, 0, 0.06);
+  /* border-top: 1px solid rgba(0, 0, 0, 0.06); */
 }
 
 .table thead th {
